@@ -2,6 +2,8 @@ Cascading Change Log
 
 2.2.1 [unreleased]
 
+  Fixed issue where a race condition could cause a NPE between c.c.Cascade#start() and Cascade#stop().
+
 2.2.0
 
   Fixed issue where c.p.CoGroup in local mode did not properly handle joins where the grouping j.u.Comparator
